--- a/app/views/template/shopping-cart.html.erb
+++ b/app/views/template/shopping-cart.html.erb
@@ -18,17 +18,17 @@
 <!-- page title -->
 <title>inCart - Responsive Shop Theme</title>
 <!-- bootstrap css -->
-<!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
+<link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- css -->
-<!-- <link href="css/style.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
 <link href="css/animate.css" rel="stylesheet">
 <link href="css/owl.carousel.css" rel="stylesheet">
-<link href="css/owl.theme.css" rel="stylesheet"> -->
+<link href="css/owl.theme.css" rel="stylesheet">
 <!-- fonts -->
 <!-- <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet"> -->
-<!-- <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href='fonts/FontAwesome.otf' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="css/linear-icons.css"> -->
+<link rel="stylesheet" href="css/linear-icons.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -116,15 +116,6 @@
                             <li><a href="#"><%= image_tag('es.png') %> ES</a></li>
                         </ul>
                     </li>
-
-                </ul>
-              </li>
-              <li>
-                <a href="/about">About</a>
-              </li>
-              <li>
-                <a href="/contact">Contact</a>
-              </li>
             </ul>
           </div>
           <!--/ nav-collapse -->
@@ -204,14 +195,7 @@
                   </form>
             </div><!-- / cart-checkout -->
 
-          <div class="col-sm-6 cart-checkout">
-            <a href="shop-right.html" class="btn btn-default-filled btn-rounded">
-              <i class="lnr lnr-cart"></i>
-              <span>Continue Shopping</span></a>
-            <a href="checkout.html" class="btn btn-primary-filled btn-rounded">
-              <i class="lnr lnr-exit"></i>
-              <span>Proceed to Checkout</span></a>
-          </div>
+
           <!-- / cart-checkout -->
 
         </div>
