--- a/app/views/template/single-product.html.erb
+++ b/app/views/template/single-product.html.erb
@@ -27,7 +27,7 @@
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]> <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script> <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script> <![endif]-->
+    <!-- [if lt IE 9]> <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script> <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script> <![endif] -->
   </head>
 
   <body>
@@ -125,24 +125,18 @@
                 <!-- wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                   <div class="item active">
-                    <img src="images/product-slide1.jpg" alt="">
-                  </div>
-                  <div class="item">
-                    <img src="images/product-slide2.jpg" alt="">
-                  </div>
-                  <div class="item">
-                    <img src="images/product-slide3.jpg" alt="">
+                    <%= image_tag('slide1.jpg') %>
                   </div>
                 </div>
                 <!-- / wrapper for slides -->
 
                 <!-- controls -->
-                <a class="left carousel-control" href="#product-slider" role="button" data-slide="prev">
+                <!-- <a class="left carousel-control" href="#product-slider" role="button" data-slide="prev">
                   <span class="lnr lnr-chevron-left" aria-hidden="true"></span>
                 </a>
                 <a class="right carousel-control" href="#product-slider" role="button" data-slide="next">
                   <span class="lnr lnr-chevron-right" aria-hidden="true"></span>
-                </a>
+                </a> -->
                 <!-- / controls -->
               </div>
               <!-- / product-slider -->
@@ -213,7 +207,7 @@
                 <div role="tabpanel" class="tab-pane animated fadeIn" id="reviews">
                   <div class="reviews">
                     <div class="review-author pull-left">
-                      <img src="images/author1.jpg" alt="">
+                      <%= image_tag('author1.jpg') %>
                     </div>
                     <div class="review-content">
                       <h4 class="review-title no-margin">Simply the Best!</h4>
@@ -236,7 +230,7 @@
                     <div class="space-25">&nbsp;</div>
 
                     <div class="review-author pull-left">
-                      <img src="images/author2.jpg" alt="">
+                      <%= image_tag('author2.jpg') %>
                     </div>
                     <div class="review-content">
                       <h4 class="review-title no-margin">Good Product.</h4>
@@ -264,33 +258,7 @@
             </div>
             <!-- / product-content-area -->
 
-            <!-- add review -->
-            <div id="add-review" class="space-top-30">
-              <h4>Leave a review</h4>
-              <div class="row">
-                <div class="col-sm-4 review-form">
-                  <input type="text" class="form-control" placeholder="*Name" required="required">
-                </div>
-                <div class="col-sm-4 review-form">
-                  <input type="email" class="form-control" placeholder="*Email" required="required">
-                </div>
-                <div class="col-sm-4 review-form">
-                  <select class="form-control">
-                    <option>5 Stars</option>
-                    <option>4 Stars</option>
-                    <option>3 Stars</option>
-                    <option>2 Stars</option>
-                    <option>1 Star</option>
-                  </select>
-                </div>
-                <div class="col-sm-12 review-form">
-                  <textarea rows="7" class="form-control" placeholder="*Review" required="required"></textarea>
-                  <button type="submit" class="btn btn-submit btn-primary-filled btn-rounded">Submit Review</button>
-                </div>
-              </div>
-              <!-- / row -->
-            </div>
-            <!-- / add review -->
+
 
             <!-- product pagination -->
             <div class="pagination no-padding">
@@ -399,127 +367,7 @@
           <!-- / project sidebar area -->
 
         </div>
-        <!-- / row -->
 
-        <div id="related-products">
-          <h4 class="space-left space-bottom-30">Related Products</h4>
-          <div class="row">
-
-            <!-- product -->
-            <div class="col-xs-6 col-md-3 product">
-              <span class="sale-label">SALE</span>
-              <a href="single-product.html" class="product-link"></a>
-              <!-- / product-link -->
-              <img src="images/f-product.jpg" alt="">
-              <!-- / product-image -->
-
-              <!-- product-hover-tools -->
-              <div class="product-hover-tools">
-                <a href="single-product.html" class="view-btn">
-                  <i class="lnr lnr-eye"></i>
-                </a>
-                <a href="shopping-cart.html" class="add-to-cart">
-                  <i class="lnr lnr-cart"></i>
-                </a>
-              </div>
-              <!-- / product-hover-tools -->
-
-              <!-- product-details -->
-              <div class="product-details">
-                <h3 class="product-title">Women's Shirt</h3>
-                <h6 class="product-price">
-                  <del>$49</del>
-                  <span class="sale-price">$29</span></h6>
-              </div>
-              <!-- / product-details -->
-            </div>
-            <!-- / product -->
-
-            <!-- product -->
-            <div class="col-xs-6 col-md-3 product">
-              <a href="single-product.html" class="product-link"></a>
-              <!-- / product-link -->
-              <img src="images/f-product.jpg" alt="">
-              <!-- / product-image -->
-
-              <!-- product-hover-tools -->
-              <div class="product-hover-tools">
-                <a href="single-product.html" class="view-btn">
-                  <i class="lnr lnr-eye"></i>
-                </a>
-                <a href="shopping-cart.html" class="add-to-cart">
-                  <i class="lnr lnr-cart"></i>
-                </a>
-              </div>
-              <!-- / product-hover-tools -->
-
-              <!-- product-details -->
-              <div class="product-details">
-                <h3 class="product-title">Women's Shirt</h3>
-                <h6 class="product-price">$99</h6>
-              </div>
-              <!-- / product-details -->
-            </div>
-            <!-- / product -->
-
-            <!-- product -->
-            <div class="col-xs-6 col-md-3 product">
-              <a href="single-product.html" class="product-link"></a>
-              <!-- / product-link -->
-              <img src="images/f-product.jpg" alt="">
-              <!-- / product-image -->
-
-              <!-- product-hover-tools -->
-              <div class="product-hover-tools">
-                <a href="single-product.html" class="view-btn">
-                  <i class="lnr lnr-eye"></i>
-                </a>
-                <a href="shopping-cart.html" class="add-to-cart">
-                  <i class="lnr lnr-cart"></i>
-                </a>
-              </div>
-              <!-- / product-hover-tools -->
-
-              <!-- product-details -->
-              <div class="product-details">
-                <h3 class="product-title">Women's Shirt</h3>
-                <h6 class="product-price">$29</h6>
-              </div>
-              <!-- / product-details -->
-            </div>
-            <!-- / product -->
-
-            <!-- product -->
-            <div class="col-xs-6 col-md-3 product">
-              <a href="single-product.html" class="product-link"></a>
-              <!-- / product-link -->
-              <img src="images/f-product.jpg" alt="">
-              <!-- / product-image -->
-
-              <!-- product-hover-tools -->
-              <div class="product-hover-tools">
-                <a href="single-product.html" class="view-btn">
-                  <i class="lnr lnr-eye"></i>
-                </a>
-                <a href="shopping-cart.html" class="add-to-cart">
-                  <i class="lnr lnr-cart"></i>
-                </a>
-              </div>
-              <!-- / product-hover-tools -->
-
-              <!-- product-details -->
-              <div class="product-details">
-                <h3 class="product-title">Women's Shirt</h3>
-                <h6 class="product-price">$39</h6>
-              </div>
-              <!-- / product-details -->
-            </div>
-            <!-- / product -->
-
-          </div>
-          <!-- / row -->
-        </div>
-        <!-- / related-products -->
       </div>
       <!-- / container -->
     </section>
@@ -536,7 +384,7 @@
             <div class="col-sm-6 col-md-4 widget">
               <div class="about-widget">
                 <div class="widget-title-image">
-                  <img src="images/logo.png" alt="">
+                  <%= image_tag('logo.png') %>
                 </div>
                 <p>Praesent sed congue ipsum. Nullam tempus ornare est, non aliquet velit tincidunt elementum. Nulla at risus ut felis eleifend. Nulla non lacinia. Integer est lacus, ultricies sed feugiat id, maximus nec.</p>
               </div>
@@ -657,10 +505,10 @@
               - Responsive Shop Theme.</p>
           </div>
           <span class="pull-right">
-            <img src="images/visa.png" alt="">
-            <img src="images/mastercard.png" alt="">
-            <img src="images/discover.png" alt="">
-            <img src="images/paypal.png" alt="">
+            <%= image_tag('visa.png') %>
+            <%= image_tag('mastercard.png') %>
+            <%= image_tag('discover.png') %>
+            <%= image_tag('paypal.png') %>
           </span>
         </div>
         <!-- / container -->
